--- a/application/templates/visits/new.html
+++ b/application/templates/visits/new.html
@@ -11,17 +11,37 @@
      <td>
         {{ form.church}}
      </td>
+     <td>
+       <ul>
+  	    {% for error in form.church.errors %}
+	      <li>{{ error }}</li>
+	      {% endfor %}
+       </ul>
+     </td>
     </tr>
     <tr>
+      <td>
+        {{ form.comment.label }}
+      </td>
+      <td>
+       {{ form.comment }}
+      </td>
+      <td>
+        <ul>
+          {% for error in form.comment.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+      </td>
+    </tr>
+  <tr>
     <td>
-      {{ form.comment.label }}
-    </td>
-
-     <td>
-    {{ form.comment }}
-   </td>
-  </tr>
-  </tr>
+      {{ form.tourguide.label }}
+     </td>
+  <td>
+   {{ form.tourguide }}
+  </td>
+</tr>
     <tr>
       <td colspan="2">
        <input type="submit" value="Lisää vierailu!"/>
