--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -17,6 +17,7 @@
     <ul>
 <li><a href="{{ url_for('visits_index') }}">Selaa vierailuja!</a></li>
 <li><a href="{{ url_for('visits_form') }}">Lisää vierailu!</a></li>
+<li><a href="{{ url_for('auth_register') }}">Rekisteröidy</a></li>
     </ul>
     
     {% block body %}
