--- a/application/templates/auth/registration.html
+++ b/application/templates/auth/registration.html
@@ -3,36 +3,36 @@
 {% block body %}
 {{ error }}
 <form method="POST" action="{{ url_for('auth_newUser') }}">
-  <table>
-    <tr>
-      <td>
-	{{ form.name.label }}
-      </td>
-      <td>
-	{{ form.name }}
-      </td>
-    </tr>
-    <tr>
-        <td>
-      {{ form.username.label }}
-        </td>
-        <td>
-      {{ form.username }}
-        </td>
-      </tr>
-    <tr>
-      <td>
-	{{ form.password.label }}
-      </td>
-      <td>
-	{{ form.password }} <td>{{ form.passwordcheck }}</td>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="2">
-	<input type="submit" value="Rekisteröidy"/>
-      </td>
-    </tr>
+    <table>
+        <tr>
+            <td>
+                {{ form.name.label }}
+            </td>
+            <td>
+                {{ form.name }}
+            </td>
+        </tr>
+        <tr>
+            <td>
+                {{ form.username.label }}
+            </td>
+            <td>
+                {{ form.username }}
+            </td>
+        </tr>
+        <tr>
+            <td>
+                {{ form.password.label }}
+            </td>
+            <td>
+                {{ form.password }}
+            <td>{{ form.passwordcheck }}</td>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <input type="submit" value="Rekisteröidy" />
+            </td>
+        </tr>
 </form>
-{% endblock %} 
- 
+{% endblock %}
