--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -11,13 +11,12 @@
      Kirjautunut nimellä {{ current_user.name }}.  <a href="{{ url_for('auth_logout') }}">Kirjaudu ulos</a>
     </p>
     {% else %}
-    <a href="{{ url_for('auth_login') }}">Kirjaudu</a>
+    <a href="{{ url_for('auth_login') }}">Kirjaudu</a> tai <a href="{{ url_for('auth_register') }}">Rekisteröidy</a>
     {% endif %}
     
     <ul>
 <li><a href="{{ url_for('visits_index') }}">Selaa vierailuja!</a></li>
 <li><a href="{{ url_for('visits_form') }}">Lisää vierailu!</a></li>
-<li><a href="{{ url_for('auth_register') }}">Rekisteröidy</a></li>
     </ul>
     
     {% block body %}
