--- a/application/templates/visits/new.html
+++ b/application/templates/visits/new.html
@@ -1,30 +1,30 @@
 {% extends "layout.html" %}
-  
+
 
 {% block body %}
 <form method="POST" action="{{ url_for('visits_create') }}">
   <table>
     <tr>
-     <td>
-       {{ form.church.label }}
-     </td>
-     <td>
+      <td>
+        {{ form.church.label }}
+      </td>
+      <td>
         {{ form.church}}
-     </td>
-     <td>
-       <ul>
-  	    {% for error in form.church.errors %}
-	      <li>{{ error }}</li>
-	      {% endfor %}
-       </ul>
-     </td>
+      </td>
+      <td>
+        <ul>
+          {% for error in form.church.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+      </td>
     </tr>
     <tr>
       <td>
         {{ form.comment.label }}
       </td>
       <td>
-       {{ form.comment }}
+        {{ form.comment }}
       </td>
       <td>
         <ul>
@@ -34,18 +34,19 @@
         </ul>
       </td>
     </tr>
-  <tr>
-    <td>
-      {{ form.tourguide.label }}
-     </td>
-  <td>
-   {{ form.tourguide }}
-  </td>
-</tr>
     <tr>
-      <td colspan="2">
-       <input type="submit" value="Lisää vierailu!"/>
+      <td>
+        {{ form.tourguide.label }}
+      </td>
+      <td>
+        {{ form.tourguide }}
       </td>
     </tr>
+    <tr>
+      <td colspan="2">
+        <input type="submit" value="Lisää vierailu!" />
+      </td>
+    </tr>
+  </table>
 </form>
 {% endblock %}
