--- a/application/templates/auth/registration.html
+++ b/application/templates/auth/registration.html
@@ -30,6 +30,22 @@
             </td>
         </tr>
         <tr>
+            <td>
+                <ul>
+                    {% for error in form.username.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                    {% for error in form.name.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                    {% for error in form.password.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            </td>
+
+        </tr>
+        <tr>
             <td colspan="2">
                 <input type="submit" value="Rekisteröidy" />
             </td>
