Tietokantataulu kirkoille ja niiden luku tiedostosta

--- a/application/templates/visits/list.html
+++ b/application/templates/visits/list.html
@@ -9,7 +9,7 @@
   </tr>
   {% for visit in visits %}
   <tr>
-    <td>{{ visit.church }}</td>
+    <td>{{ visit.church_id }}</td>
     <td>{{ visit.comment }}</td>
     <td>{{ visit.tourguide }}</td>
     <td>
