--- a/application/templates/visits/edit.html
+++ b/application/templates/visits/edit.html
@@ -8,7 +8,7 @@
             Kirkko
         </td>
         <td>
-            {{ visit.church }}
+            {{ visit.church_id }}
         </td>
     </tr>
     <tr>
