Alustava kirkko- ja vierailutaulujen yhdistäminen myös käyttäjälle

--- a/application/templates/visits/list.html
+++ b/application/templates/visits/list.html
@@ -19,7 +19,7 @@
     </td>
     <td>
       <form method="POST" action="{{ url_for('visit_delete', visit_id=visit.id) }}">
-        <input type="submit" value="Poista arvio" />
+        <input type="submit" value="Poista vierailu" />
       </form>
     </td>
   </tr>
