--- a/application/templates/visits/edit.html
+++ b/application/templates/visits/edit.html
@@ -53,7 +53,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <input type="submit" value="Tallenna uusi kommentti" />
+                <input type="submit" value="Tallenna päivitetty kommentti" />
             </td>
         </tr>
         <tr>
