--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Tiekirkkosovellus</title>
-  </head>
-  
-  <body>
-    {% if current_user.is_authenticated %}
-    <p>
-     Kirjautunut nimellä {{ current_user.name }}.  <a href="{{ url_for('auth_logout') }}">Kirjaudu ulos</a>
-    </p>
-    {% else %}
-    <a href="{{ url_for('auth_login') }}">Kirjaudu</a> tai <a href="{{ url_for('auth_register') }}">Rekisteröidy</a>
-    {% endif %}
-    
-    <ul>
-<li><a href="{{ url_for('visits_index') }}">Selaa vierailuja!</a></li>
-<li><a href="{{ url_for('visits_form') }}">Lisää vierailu!</a></li>
-    </ul>
-    
-    {% block body %}
-    <p>
-Content.
-    </p>
-    {% endblock %}
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Tiekirkkosovellus</title>
+</head>
+
+<body>
+  {% if current_user.is_authenticated %}
+  <p>
+    Kirjautunut nimellä {{ current_user.name }}. <a href="{{ url_for('auth_logout') }}">Kirjaudu ulos</a>
+  </p>
+  {% else %}
+  <a href="{{ url_for('auth_login') }}">Kirjaudu</a> tai <a href="{{ url_for('auth_register') }}">Rekisteröidy</a>
+  {% endif %}
+
+  <ul>
+    <li><a href="{{ url_for('visits_index') }}">Selaa omia vierailuja!</a></li>
+    <li><a href="{{ url_for('towns_index') }}">Selaa kirkkoja kunnittain!</a></li>
+    <li><a href="{{ url_for('visits_form') }}">Lisää vierailu!</a></li>
+  </ul>
+
+  {% block body %}
+  <p>
+    Content.
+  </p>
+  {% endblock %}
+</body>
+
 </html>
