--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -4,28 +4,74 @@
 <head>
   <meta charset="utf-8">
   <title>Tiekirkkosovellus</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
-  {% if current_user.is_authenticated %}
-  <p>
-    Kirjautunut nimellä {{ current_user.name }}. <a href="{{ url_for('auth_logout') }}">Kirjaudu ulos</a>
-  </p>
-  {% else %}
-  <a href="{{ url_for('auth_login') }}">Kirjaudu</a> tai <a href="{{ url_for('auth_register') }}">Rekisteröidy</a>
-  {% endif %}
 
-  <ul>
-    <li><a href="{{ url_for('visits_index') }}">Selaa omia vierailuja!</a></li>
-    <li><a href="{{ url_for('towns_index') }}">Selaa kirkkoja kunnittain!</a></li>
-    <li><a href="{{ url_for('visits_form') }}">Lisää vierailu!</a></li>
-  </ul>
+
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Tiekirkkosovellus</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        {% if current_user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth_logout') }}">Kirjaudu ulos</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth_login') }}">Kirjaudu</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth_register') }}">Rekisteröidy</a>
+        </li>
+        {% endif %}
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Valikko
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{{ url_for('visits_index') }}">Selaa omia vierailuja</a>
+            <a class="dropdown-item" href="{{ url_for('towns_index') }}">Selaa kirkkoja kunnittain</a>
+            <a class="dropdown-item" href="{{ url_for('visits_form') }}">Lisää uusi vierailu</a>
+          </div>
+        </li>
+
+        {% if current_user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Hei, {{ current_user.name }}!</a>
+        </li>
+        {% endif %}
+
+      </ul>
+    </div>
+  </nav>
+
 
   {% block body %}
   <p>
     Content.
   </p>
   {% endblock %}
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
