--- a/application/templates/visits/new.html
+++ b/application/templates/visits/new.html
@@ -3,6 +3,7 @@
 
 {% block body %}
 <form method="POST" action="{{ url_for('visits_create') }}">
+  <h1 class="h3 mb-3 font-weight-normal">Lisää uusi vierailu</h1>
   <table>
     <tr>
       <td>
