--- a/application/templates/churches/townlist.html
+++ b/application/templates/churches/townlist.html
@@ -9,7 +9,7 @@
         <th scope="col">Kunta</th>
         <th scope="col">Tiekirkkoja</th>
         <th scope="col">Vierailuja yhteensä</th>
-        <th scope="col">Selaa kirkkoja</th>
+        <th scope="col">Selaa</th>
       </tr>
     </thead>
     {% for town in towns %}
