--- a/application/templates/visits/new.html
+++ b/application/templates/visits/new.html
@@ -11,7 +11,7 @@
       </td>
       <td>
         <input type="text" id="church" name="church" list="church_list" placeholder="Kirkko">
-        <datalist id="church_list">churches
+        <datalist id="church_list">
           {% for church in churches %}
           <option>{{ church }}</option>
           {% endfor %}
