--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -13,7 +13,7 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Tiekirkkosovellus</a>
+    <a class="navbar-brand" href="{{ url_for('index') }}">Tiekirkkosovellus</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
