--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -43,6 +43,9 @@
             <a class="dropdown-item" href="{{ url_for('visits_index') }}">Selaa omia vierailuja</a>
             <a class="dropdown-item" href="{{ url_for('towns_index') }}">Selaa kirkkoja kunnittain</a>
             <a class="dropdown-item" href="{{ url_for('visits_form') }}">Lisää uusi vierailu</a>
+            {% if current_user.is_authenticated %}
+            <a class="dropdown-item" href="{{ url_for('myinfo') }}">Omat tiedot</a>
+            {% endif %}
           </div>
         </li>
 
