--- a/application/templates/auth/registration.html
+++ b/application/templates/auth/registration.html
@@ -19,6 +19,9 @@
             <td>
                 {{ form.username }}
             </td>
+            <td>
+                {{ dataerror }}
+            </td>
         </tr>
         <tr>
             <td>
