--- a/application/templates/auth/myinfo.html
+++ b/application/templates/auth/myinfo.html
@@ -7,7 +7,8 @@
         <tr>
             <th scope="col"> </th>
             <th scope="col">Nykyiset tiedot</th>
-            <th scope="col">Päivitä </th>
+            <th scope="col">Uudet tiedot</th>
+            <th scope="col">Päivitä</th>
         </tr>
     </thead>
     <tr>
@@ -31,7 +32,7 @@
             <td>
                 {{ user.username }}
             </td>
-            </td>
+            
             <td>
                 <input type="text" name="username" placeholder="uusi käyttäjänimi">
             </td>
