--- a/application/templates/visits/list.html
+++ b/application/templates/visits/list.html
@@ -19,9 +19,9 @@
       <th scope="row">{{ visit.church }}</th>
       <td>{{ visit.comment }}</td>
       {% if visit.tourguide %}
-      <td> &#x2714; </td>
+      <td> Kyllä </td>
       {% else %}
-      <td> &#x274C; </td>
+      <td> Ei </td>
       {% endif %}
       <td>
         <form method="POST" action="{{ url_for('visit_edit', visit_id=visit.id) }}">
