Virheviestejä ja admin-määre tietokantatauluun

--- a/application/templates/admin/addtourguide.html
+++ b/application/templates/admin/addtourguide.html
@@ -20,6 +20,11 @@
         </td>
         </form>
     </tr>
+    <tr>
+        <td>
+            {{ error }}
+        </td>
+    </tr>
 </table>
 
 {% endblock %}
