Käyttäjäryhmä oppaat ja niille ensimmäinen näkymä

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -60,6 +60,19 @@
         </li>
         {% endif %}
 
+        {% if current_user.is_authenticated and current_user.is_tourguide() %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Opas-valikko
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{{ url_for('guide_churches') }}">Omat kirkot</a>
+          </div>
+        </li>
+        {% endif %}
+
+
         {% if current_user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Hei, {{ current_user.name }}!</a>
