--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -67,7 +67,8 @@
             Opas-valikko
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{{ url_for('guide_churches') }}">Omat kirkot</a>
+            <a class="dropdown-item" href="{{ url_for('guide_churches') }}">Lisää päivän vierailijamäärä</a>
+            <a class="dropdown-item" href="{{ url_for('guide_view_stats') }}">Tilastoja</a>
           </div>
         </li>
         {% endif %}
