--- a/application/templates/auth/myinfo.html
+++ b/application/templates/auth/myinfo.html
@@ -62,7 +62,7 @@
     </tr>
     <tr>
         <form method="POST" action="{{ url_for('update_deleteaccount') }}">
-            <td><input type="checkbox" name="delete" checked>
+            <td><input type="checkbox" name="delete">
                 <label for="delete">Poista tili</label>
             </td>
             <td>
