--- a/application/templates/admin/addtourguide.html
+++ b/application/templates/admin/addtourguide.html
@@ -22,7 +22,8 @@
     </tr>
     <tr>
         <td>
-            {{ error }}
+            {{ no_data_error }}
+            {{ in_table_error }}
         </td>
     </tr>
 </table>
