Salasananmuutos kryptattu, liian pitkien syötteiden validointi, varoitukset pois dokumentaatiosta

--- a/application/templates/visits/edit.html
+++ b/application/templates/visits/edit.html
@@ -32,7 +32,11 @@
             Opas paikalla
         </td>
         <td>
-            {{ visit.tourguide }}
+            {% if visit.tourguide %}
+            Kyllä
+            {% else %}
+            Ei
+            {% endif %}
         </td>
     </tr>
     <tr>
@@ -60,7 +64,7 @@
             <td>
                 <ul>
                     {% for error in form.comment.errors %}
-                    <li>Uuden kommentin oltava vähintään kaksi merkkiä pitkä</li>
+                    <td>{{ error }} </td>
                     {% endfor %}
                 </ul>
             </td>
