Kommentin maksimipituuden pienennys

--- a/application/templates/visits/new.html
+++ b/application/templates/visits/new.html
@@ -32,7 +32,7 @@
       <td>
         <ul>
           {% for error in form.comment.errors %}
-          <li>{{ error }}</li>
+          <td>{{ error }}</td>>
           {% endfor %}
         </ul>
       </td>
