--- a/application/templates/auth/registration.html
+++ b/application/templates/auth/registration.html
@@ -4,6 +4,7 @@
 {{ error }}
 <form method="POST" action="{{ url_for('auth_newUser') }}">
     <table>
+        <h1 class="h3 mb-3 font-weight-normal">Rekisteröidy</h1>
         <tr>
             <td>
                 {{ form.name.label }}
