--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -76,7 +76,7 @@
 
         {% if current_user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Hei, {{ current_user.name }}!</a>
+          <a class="navbar-text"> Hei, {{ current_user.name }}!</a>
         </li>
         {% endif %}
 
