--- a/application/templates/visits/edit.html
+++ b/application/templates/visits/edit.html
@@ -3,6 +3,7 @@
 
 {% block body %}
 <table>
+    <h1 class="h3 mb-3 font-weight-normal">Muokkaa vierailua</h1>
     <tr>
         <td>
             Kirkko
