--- a/application/templates/auth/myinfo.html
+++ b/application/templates/auth/myinfo.html
@@ -56,6 +56,7 @@
         <td>{{ error }}</td>
         {% endfor %}
     </tr>
+    {% if current_user.id!=1 %}
     <tr>
         <td></td>
         <td></td>
@@ -68,4 +69,5 @@
             </td>
         </form>
     </tr>
+    {% endif %}
     {% endblock %}
